<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c8c7b2">

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/profile_bg"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:background="#d9d9ca"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/sog"
                    android:text="@string/btn_search"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="7dp"
                    android:layout_width="180dp"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:background="@color/button_round"
                    android:layout_height="64dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="7dp"
                    android:visibility="gone"
                    android:id="@+id/episode"
                    android:layout_height="match_parent">
                    <include layout="@layout/fragment_discover_row"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="7dp"
                    android:visibility="gone"
                    android:id="@+id/no_episode"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="No record found!"
                        android:id="@+id/textView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="7dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="140dp"
                        android:layout_height="40dp"
                        android:background="#000000"
                        android:layout_marginRight="7dp">

                        <TextView
                            android:id="@+id/btn_short_tags"
                            android:layout_weight="1"
                            android:text="@string/btn_short"
                            android:textColor="@android:color/white"
                            android:layout_width="match_parent"
                            android:padding="4dp"
                            android:background="@drawable/my_list_listen_later"
                            android:gravity="center"
                            android:layout_height="match_parent"
                            android:layout_margin="2dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="140dp"
                        android:layout_height="40dp"
                        android:background="#000000"
                        android:layout_marginLeft="7dp">

                        <TextView
                            android:id="@+id/btn_long_tags"
                            android:layout_weight="1"
                            android:text="@string/btn_long"
                            android:textColor="@android:color/white"
                            android:layout_width="match_parent"
                            android:padding="4dp"
                            android:background="@drawable/my_list_listen_later"
                            android:gravity="center"
                            android:layout_height="match_parent" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


            <!--            <ImageView
                            android:layout_width="match_parent"
                            android:layout_marginTop="7dp"
                            android:background="@color/button_round"
                            android:layout_height="2dp" />-->

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <include layout="@layout/view_my_tags"/>
            </ScrollView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>